Adding irb and terminal window tags

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://CodeNowOrg.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: CodeNow Curriculum
+subtitle: A guide to teaching a CodeNow class.
+author: CodeNowOrg
 simple_search: http://google.com/search
 description:
 
